added the admin dashboard

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <a href="#" class="nav-link">Why us</a>
           <a href="#" class="nav-link">About us</a>
           <a href="./src/jobs/jobs-list.html" class="nav-link">Jobs</a>
-          <a href="#" class="nav-link">Resources</a>
+          <a href="./src//admin/add-job/V2.html" class="nav-link">add jobs</a>
           <a href="#" class="nav-link">Customers</a>
         </div>
         <div class="hidden md:flex items-center space-x-4">
