--- a/src/user/dashboard/profile/dashboard-profile.html
+++ b/src/user/dashboard/profile/dashboard-profile.html
@@ -329,6 +329,6 @@
     </main>
   </div>
   <!-- Custom JS -->
-  <script src="script.js"></script>
+  <script src="./dashboard-profile.js"></script>
 </body>
 </html>
