--- a/src/admin/manage-rounds/manage-rounds.html
+++ b/src/admin/manage-rounds/manage-rounds.html
@@ -25,12 +25,17 @@
         extend: {
           colors: {
             primary: "#265DF5",
-            danger: "#DC3545",
-            baselight: "#F4F6FA",
+            secondary: "#0CADF3",
+            darkblue: "#0A1A2F",
             neutral: {
               dark: "#0D1B2A",
               mid: "#1B263B",
+              light: "#415A77",
             },
+            success: "#28A745",
+            danger: "#DC3545",
+            baselight: "#F4F6FA",
+            white: "#FFFFFF",
           },
         },
       },
@@ -40,22 +45,43 @@
 <body class="flex h-screen overflow-hidden bg-white dark:bg-neutral-dark text-neutral-dark dark:text-white">
 
   <!-- Sidebar -->
+   <!-- Sidebar -->
   <aside id="sidebar" class="bg-white dark:bg-neutral-dark text-neutral-dark dark:text-white 
     w-64 flex flex-col fixed top-16 left-0 h-[calc(100%-4rem)] 
     transform -translate-x-full lg:translate-x-0 lg:relative 
     transition-transform duration-300 z-30 shadow-lg">
     
-    <nav class="flex-1 p-4 space-y-2 overflow-y-auto">
-      <a href="#" class="flex items-center py-2 px-3 rounded hover:bg-primary hover:text-white transition">
-        <i class="fas fa-home w-5 mr-2"></i> Profile
-      </a>
-      <a href="#" class="flex items-center py-2 px-3 rounded hover:bg-primary hover:text-white transition">
-        <i class="fas fa-briefcase w-5 mr-2"></i> Applications
-      </a>
-      <a href="#" class="flex items-center py-2 px-3 rounded hover:bg-primary hover:text-white transition">
-        <i class="fas fa-users w-5 mr-2"></i> Saved jobs
-      </a>
-    </nav>
+   <nav class="flex-1 p-4 space-y-2 overflow-y-auto">
+  <!-- Dashboard with gradient hover -->
+  <a href="../dashboard/dashboard.html" 
+   class="flex items-center py-2 px-3 rounded transition hover:bg-gradient-to-r hover:from-primary hover:to-secondary hover:text-white">
+  <i class="fas fa-home w-5 mr-2"></i> Dashboard
+</a>
+
+<a href="../add-job/V2.html" class="flex items-center py-2 px-3 rounded hover:bg-primary hover:text-white transition">
+      <i class="fas fa-tasks w-5 mr-2"></i> Manage Jobs
+    </a>
+
+
+<a href="../applications-management/applications-management.html" 
+   class="flex items-center py-2 px-3 rounded transition hover:bg-gradient-to-r hover:from-primary hover:to-secondary hover:text-white">
+    <i class="fas fa-folder-open w-5 mr-2"></i> Manage Applications
+</a>
+
+<a href="#" 
+   class="flex items-center py-2 px-3 rounded bg-gradient-to-r from-primary to-secondary text-white shadow">
+   <i class="fas fa-layer-group w-5 mr-2"></i> Rounds Management
+ 
+</a>
+
+
+<a href="./settings.html" 
+   class="flex items-center py-2 px-3 rounded transition hover:bg-gradient-to-r hover:from-primary hover:to-secondary hover:text-white">
+  <i class="fas fa-cog w-5 mr-2"></i> Settings
+</a>
+
+</nav>
+
     <div class="p-4 border-t border-gray-200 dark:border-gray-800">
       <button class="w-full flex items-center justify-center py-2 px-4 bg-danger hover:bg-red-600 rounded transition">
         <i class="fas fa-sign-out-alt w-5 mr-2"></i> Logout
