--- a/src/auth/auth-signup.html
+++ b/src/auth/auth-signup.html
@@ -1,186 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Create Account</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Create Account - Job Portal</title>
 
-  <!-- Google Fonts: Poppins -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+<!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-  <!-- Notyf CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf/notyf.min.css">
-
-<!-- Notyf JS -->
-<script src="https://cdn.jsdelivr.net/npm/notyf/notyf.min.js"></script>
-
-
-  <!-- Tailwind -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      darkMode: 'class',
-      theme: {
-        extend: {
-          colors: {
-            primary: "#265DF5",
-            secondary: "#0CADF3",
-            darkblue: "#0A1A2F",
-            neutral: {
-              dark: "#0D1B2A",
-              mid: "#1B263B",
-              light: "#415A77",
-            },
-            success: "#28A745",
-            danger: "#DC3545",
-            baselight: "#F4F6FA",
-            white: "#FFFFFF",
-          },
+<!-- Tailwind CSS -->
+<script src="https://cdn.tailwindcss.com"></script>
+<script>
+  tailwind.config = {
+    darkMode: 'class',
+    theme: {
+      extend: {
+        colors: {
+          primary: "#265DF5",
+          secondary: "#0CADF3",
+          darkblue: "#0A1A2F",
+          baselight: "#F4F6FA",
         },
       },
-    };
-  </script>
+    },
+  };
+</script>
 
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+<!-- Font Awesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 
-  <!-- Feather Icons -->
-  <script src="https://unpkg.com/feather-icons"></script>
-
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-    }
-  </style>
+<style>
+  body { font-family: 'Poppins', sans-serif; }
+</style>
 </head>
-<body class="bg-gradient-to-br from-basilight to-gray-100 dark:from-neutral-dark dark:to-neutral-mid">
+<body class="min-h-screen bg-gradient-to-br from-blue-50 to-white flex items-center justify-center p-4">
 
-  <!-- Mobile Menu Overlay -->
-  <div id="mobile-menu" class="fixed inset-0 bg-black bg-opacity-50 z-50 pointer-events-none transition-opacity duration-300 opacity-0">
-    <div id="mobile-menu-content" class="bg-white dark:bg-neutral-mid w-64 h-full p-6 space-y-6 transform -translate-x-full transition-transform duration-300">
-      <button id="close-menu" class="text-darkblue dark:text-white text-xl"><i class="fas fa-times"></i></button>
-      <ul class="space-y-4 font-medium">
-        <li class="hover:text-primary cursor-pointer">Home</li>
-        <li class="hover:text-primary cursor-pointer">Jobs</li>
-        <li class="hover:text-primary cursor-pointer">Dashboard</li>
-        <li class="hover:text-primary cursor-pointer">Contact Us</li>
-        <li>
-      <button class="px-4 py-1 border border-neutral-light rounded text-darkblue dark:text-white">Sign In</button>
-
-        </li>
-      <button class="px-4 py-1 bg-primary text-white rounded hover:bg-secondary transition">Login</button>
-        <li></li>
-      </ul>
-    </div>
-  </div>
-
-  <!-- Navbar -->
-  <nav class="bg-white dark:bg-darkblue shadow-md px-6 py-4 flex justify-between items-center sticky top-0 z-40 transition-colors duration-500">
-    <!-- Left: Logo + Hamburger -->
-    <div class="flex items-center space-x-2">
-      <button id="hamburger" class="md:hidden text-xl text-darkblue dark:text-white"><i class="fas fa-bars"></i></button>
-      <span class="text-2xl font-bold text-primary dark:text-white">Job Portal</span>
-    </div>
-
-    <!-- Center: Links (hidden on mobile) -->
-    <ul class="hidden md:flex space-x-6 font-medium text-darkblue dark:text-white">
-      <li class="hover:text-primary cursor-pointer">Home</li>
-      <li class="hover:text-primary cursor-pointer">Jobs</li>
-      <li class="hover:text-primary cursor-pointer">Dashboard</li>
-      <li class="hover:text-primary cursor-pointer">Contact Us</li>
-    
-      <!-- <li></li> -->
-    </ul>
-
-    <!-- Right: Buttons -->
-    <div class="flex items-center space-x-2">
-      <button class="px-4 py-1 border border-neutral-light rounded text-darkblue dark:text-white hidden md:block">Sign In</button>
-      <button class="px-4 py-1 bg-primary text-white rounded hover:bg-secondary transition hidden md:block">Login</button>
-      <!-- Dark Mode Toggle -->
-      <button id="dark-toggle" class="rounded-md p-2 hover:bg-neutral-light dark:hover:bg-neutral-mid transition">
-        <i class="fas fa-moon w-5 h-5 text-darkblue dark:text-white"></i>
-      </button>
-    </div>
-  </nav>
-
-  <!-- Main Container -->
-  <main class="flex justify-center items-center px-4 py-12 md:py-20">
-    <div class="flex flex-col md:flex-row w-full max-w-5xl bg-white dark:bg-neutral-mid rounded-2xl overflow-hidden shadow-2xl">
-      
-      <!-- Left Image -->
-      <div class="hidden md:flex flex-1 justify-center items-center bg-gradient-to-br from-primary to-secondary">
-        <img src="./Hire Web System Developers _ Skilled Programmers for Hire.jpeg" 
-             alt="Illustration"
-             class="w-[85%] rounded-2xl shadow-2xl object-cover" />
-      </div>
-
-      <!-- Right Form -->
-      <div class="flex-1 p-8 md:p-10 flex flex-col justify-center">
-        <h2 class="text-3xl font-bold text-darkblue dark:text-white mb-2">Create Account</h2>
-        <p class="text-sm text-gray-500 dark:text-gray-300 mb-6">Fill in your details to get started </p>
-
-       <form id="signup-form" class="space-y-4">
-  <!-- Full Name -->
-  <div class="relative">
-    <i data-feather="user" class="absolute left-3 top-1/2 -translate-y-1/2 text-gray-400"></i>
-    <input type="text" id="fullName" placeholder="Full Name"
-      class="w-full pl-10 pr-4 py-3 rounded-xl border border-neutral-light bg-baselight dark:bg-neutral-dark text-darkblue dark:text-white focus:ring-2 focus:ring-primary focus:outline-none">
-    </div>
-    <p class="mt-1 text-sm text-red-500 hidden" id="error-fullName"></p>
-
-  <!-- Email -->
-  <div class="relative">
-    <i data-feather="mail" class="absolute left-3 top-1/2 -translate-y-1/2 text-gray-400"></i>
-    <input type="email" id="email" placeholder="Email address"
-      class="w-full pl-10 pr-4 py-3 rounded-xl border border-neutral-light bg-baselight dark:bg-neutral-dark text-darkblue dark:text-white focus:ring-2 focus:ring-primary focus:outline-none">
-    </div>
-    <p class="mt-1 text-sm text-red-500 hidden" id="error-email"></p>
-
-  <!-- Password -->
-  <div class="relative">
-    <i data-feather="lock" class="absolute left-3 top-1/2 -translate-y-1/2 text-gray-400"></i>
-    <input type="password" id="password" placeholder="Password"
-      class="w-full pl-10 pr-10 py-3 rounded-xl border border-neutral-light bg-baselight dark:bg-neutral-dark text-darkblue dark:text-white focus:ring-2 focus:ring-primary focus:outline-none">
-    <i data-feather="eye" class="toggle-password absolute right-3 top-1/2 -translate-y-1/2 text-gray-400 cursor-pointer" data-target="password"></i>
-</div>
-<p class="mt-1 text-sm text-red-500 hidden" id="error-password"></p>
-
-
-
-
-
-
-  <!-- Confirm Password -->
-  <div class="relative">
-    <i data-feather="lock" class="absolute left-3 top-1/2 -translate-y-1/2 text-gray-400"></i>
-    <input type="password" id="confirm-password" placeholder="Confirm Password"
-      class="w-full pl-10 pr-10 py-3 rounded-xl border border-neutral-light bg-baselight dark:bg-neutral-dark text-darkblue dark:text-white focus:ring-2 focus:ring-primary focus:outline-none">
-    <i data-feather="eye" class="toggle-password absolute right-3 top-1/2 -translate-y-1/2 text-gray-400 cursor-pointer" data-target="confirm-password"></i>
-</div>
-<p class="mt-1 text-sm text-red-500 hidden" id="error-confirm"></p>
-
-  <!-- Button -->
-  <button type="submit"
-    class="w-full py-3 rounded-xl font-semibold text-white bg-gradient-to-r from-primary to-secondary hover:shadow-lg hover:-translate-y-1 transition">
-    Sign Up
+  <!-- Back Button -->
+  <button onclick="history.back()" 
+          class="absolute top-6 right-6 flex items-center space-x-2 text-white 
+                 bg-gradient-to-r from-primary to-secondary 
+                 px-4 py-2 rounded-lg 
+                 hover:from-secondary hover:to-primary 
+                 hover:-translate-y-1 hover:scale-105 
+                 transition-all duration-300 ease-in-out">
+    <i class="fas fa-arrow-left"></i>
+    <span>Back</span>
   </button>
 
-  <!-- Success Message -->
-  <p id="success-msg" class="mt-3 text-center text-sm font-medium text-green-600 hidden"></p>
-</form>
+  <!-- Signup Card -->
+  <div class="w-full max-w-3xl bg-white rounded-3xl shadow-2xl overflow-hidden flex flex-col md:flex-row">
 
-        <!-- Footer Text -->
-        <p class="text-center text-sm text-gray-500 dark:text-gray-300 mt-4">
-          Already have an account? 
-          <a href="./login.html" class="text-primary font-semibold hover:underline">Log in</a>
-        </p>
-      </div>
+    <!-- Left Image -->
+    <div class="hidden md:flex flex-1 bg-gradient-to-br from-primary to-secondary justify-center items-center">
+      <img src="./Hire Web System Developers _ Skilled Programmers for Hire.jpeg" 
+           alt="Illustration" 
+           class="w-[80%] rounded-2xl shadow-xl object-cover" />
     </div>
-  </main>
 
-  
+    <!-- Right Form -->
+    <div class="flex-1 p-10 flex flex-col justify-center relative">
+      <h2 class="text-3xl font-bold text-darkblue mb-2">Create Account</h2>
+      <p class="text-gray-500 mb-6">Fill in your details to get started</p>
 
-  <script src="./signup.js"></script>
+      <form id="signup-form" class="space-y-4">
+        <!-- Full Name -->
+        <div class="relative">
+          <i class="fas fa-user absolute left-3 top-1/2 -translate-y-1/2 text-gray-400"></i>
+          <input type="text" id="fullName" placeholder="Full Name"
+                 class="w-full pl-10 pr-4 py-3 rounded-xl border border-gray-300 bg-baselight text-darkblue focus:ring-2 focus:ring-primary focus:outline-none transition" />
+        </div>
+
+        <!-- Email -->
+        <div class="relative">
+          <i class="fas fa-envelope absolute left-3 top-1/2 -translate-y-1/2 text-gray-400"></i>
+          <input type="email" id="email" placeholder="Email address"
+                 class="w-full pl-10 pr-4 py-3 rounded-xl border border-gray-300 bg-baselight text-darkblue focus:ring-2 focus:ring-primary focus:outline-none transition" />
+        </div>
+
+        <!-- Password -->
+        <div class="relative">
+          <i class="fas fa-lock absolute left-3 top-1/2 -translate-y-1/2 text-gray-400"></i>
+          <input type="password" id="password" placeholder="Password"
+                 class="w-full pl-10 pr-10 py-3 rounded-xl border border-gray-300 bg-baselight text-darkblue focus:ring-2 focus:ring-primary focus:outline-none transition" />
+          <i class="fas fa-eye toggle-password absolute right-3 top-1/2 -translate-y-1/2 text-gray-400 cursor-pointer"></i>
+        </div>
+
+        <!-- Confirm Password -->
+        <div class="relative">
+          <i class="fas fa-lock absolute left-3 top-1/2 -translate-y-1/2 text-gray-400"></i>
+          <input type="password" id="confirm-password" placeholder="Confirm Password"
+                 class="w-full pl-10 pr-10 py-3 rounded-xl border border-gray-300 bg-baselight text-darkblue focus:ring-2 focus:ring-primary focus:outline-none transition" />
+          <i class="fas fa-eye toggle-password absolute right-3 top-1/2 -translate-y-1/2 text-gray-400 cursor-pointer"></i>
+        </div>
+
+        <!-- Sign Up Button -->
+        <button type="submit"
+                class="w-full py-3 rounded-xl font-semibold text-white bg-gradient-to-r from-primary to-secondary hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
+          Sign Up
+        </button>
+      </form>
+
+      <!-- Footer -->
+      <p class="text-center text-sm text-gray-500 mt-4">
+        Already have an account? 
+        <a href="./auth-login.html" class="text-primary font-semibold hover:underline">Log in</a>
+      </p>
+    </div>
+
+  </div>
+
+  <script>
+    // Password toggle
+    document.querySelectorAll(".toggle-password").forEach(icon => {
+      icon.addEventListener("click", () => {
+        const input = icon.previousElementSibling;
+        if(input.type === "password") {
+          input.type = "text";
+          icon.classList.replace("fa-eye","fa-eye-slash");
+        } else {
+          input.type = "password";
+          icon.classList.replace("fa-eye-slash","fa-eye");
+        }
+      });
+    });
+  </script>
 
 </body>
 </html>
